# acados_vendor_ros2

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  acados_vendor_ros2-extras.cmake  package.xml
.docker/ci/: Dockerfile
.docker/run/: Dockerfile  ros_entrypoint.sh
.github/workflows/: ci-format.yml  ci-humble.yml  ci-iron.yaml  ci-jazzy.yaml  ci-rolling.yaml  ci.yml
cmake/: force_regenerate.cmake
cmake/Modules/: FindACADOS.cmake  FindFORTRANLIBS.cmake  FindFortranLibs.cmake  Findacados.cmake
env-hooks/: acados_vendor_ros2.sh.in
test/: test_acados_c_interface.cpp
